log/build_2024-12-11_19-04-04/so_arm100/stderr.log
CMake Deprecation Warning at CMakeLists.txt:1 (cmake_minimum_required):
  Compatibility with CMake < 3.10 will be removed from a future version of
  CMake.

  Update the VERSION argument <min> value or use a ...<max> suffix to tell
  CMake that the project does not need compatibility with older versions.


/home/ubuntu22/ros2_so_arm100/so_arm100/src/feetech_hardware_interface.cpp:25:7: error: redefinition of ‘class so_arm100::FeetechHardwareInterface’
   25 | class FeetechHardwareInterface : public hardware_interface::SystemInterface
      |       ^~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/ubuntu22/ros2_so_arm100/so_arm100/src/feetech_hardware_interface.cpp:1:
/home/ubuntu22/ros2_so_arm100/so_arm100/include/so_arm100/feetech_hardware_interface.hpp:17:7: note: previous definition of ‘class so_arm100::FeetechHardwareInterface’
   17 | class FeetechHardwareInterface : public hardware_interface::SystemInterface
      |       ^~~~~~~~~~~~~~~~~~~~~~~~
In file included from /opt/ros/humble/include/class_loader/class_loader/class_loader.hpp:37,
                 from /opt/ros/humble/include/pluginlib/pluginlib/class_list_macros.hpp:40,
                 from /home/ubuntu22/ros2_so_arm100/so_arm100/src/feetech_hardware_interface.cpp:250:
/usr/include/c++/11/cstddef:52:8: error: expected unqualified-id before string constant
   52 | extern "C++"
      |        ^~~~~
In file included from /opt/ros/humble/include/class_loader/class_loader/class_loader.hpp:56,
                 from /opt/ros/humble/include/pluginlib/pluginlib/class_list_macros.hpp:40,
                 from /home/ubuntu22/ros2_so_arm100/so_arm100/src/feetech_hardware_interface.cpp:250:
/home/ubuntu22/ros2_so_arm100/so_arm100/src/feetech_hardware_interface.cpp:251:1: error: expected ‘}’ at end of input
  251 | PLUGINLIB_EXPORT_CLASS(so_arm100::FeetechHardwareInterface, hardware_interface::SystemInterface)
      | ^~~~~~~~~~~~~~~~~~~~~~
/home/ubuntu22/ros2_so_arm100/so_arm100/src/feetech_hardware_interface.cpp:16:1: note: to match this ‘{’
   16 | {
      | ^
gmake[2]: *** [CMakeFiles/so_arm100.dir/build.make:79：CMakeFiles/so_arm100.dir/src/feetech_hardware_interface.cpp.o] 错误 1
gmake[1]: *** [CMakeFiles/Makefile2:151：CMakeFiles/so_arm100.dir/all] 错误 2
gmake: *** [Makefile:146：all] 错误 2
